[package]
name = "octo-flow"
version = "0.1.1"
edition = "2024"

authors = ["Iago Bozza <iago@iagobozza.com>"]
description = "High-performance Rust CLI for streaming and filtering GitHub event data from GHArchive."
readme = "README.md"

license = "MIT OR Apache-2.0"
repository = "https://github.com/writeonlycode/octo-flow"
homepage = "https://github.com/writeonlycode/octo-flow"
documentation = "https://docs.rs/octo-flow"

keywords = ["cli", "github", "json", "streaming"]
categories = ["command-line-utilities"]

[[bin]]
name = "octo-flow"
path = "src/main.rs"

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE.md"
]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
